k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-gitops
  namespace: hello-gitops
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
  - http:
      paths:
      - backend:
          service:
            name: hello-gitops
            port:
              number: 80
        path: /
        pathType: Prefix
